--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="cabecalho">
-        <div class="container"></div>
+        <div class="container">
         <input type="checkbox" id="menu" class="container__botao">
         <label for="menu" class="menu__label">
           <span class="cabecalho__menu-hamburguer container__imagem"></span>
@@ -90,7 +90,7 @@
   <div class="swiper-button-prev"></div>
   <div class="swiper-button-next"></div>
 
-</div>
+
 
 
          <div class="card">
@@ -112,7 +112,7 @@
          </div>
         </section>
 
-        <section class=”carrossel”>
+        <section class="carrossel">
           <h2 class="carrossel__titulo">Mais vendidos</h2>
           <div class="swiper">
             <!-- Additional required wrapper -->
@@ -197,7 +197,7 @@
         <section class="contato">
           <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
           <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
-          <input type="email" placeholder="Cadestre seu e-mail" class="contato__email">
+          <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
         </section>
 
         <hr/>
