--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
           <label for="opcoes-menu">
               <li class="opcoes__item">Categorias</li>
           </label> 
-
           <ul class="lista-menu">
             <li class="lista-menu__item"> <a href="#" class="lista-menu__link">Programação</a></li>
             <li class="lista-menu__item"> <a href="#" class="lista-menu__link">Front-end</a></li>
@@ -195,8 +194,10 @@
         </section>
 
         <section class="contato">
+          <div class="contato__descricao">
           <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
           <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
           <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
         </section>
 
@@ -204,6 +205,7 @@
 
         <footer class="rodape"> 
           <h2 class="rodape__titulo">Grupo Alura</h2>
+          
         </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>  
